--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,11 @@
   "cSpell.language": "en,es",
   "cSpell.enableFiletypes": [
     "astro"
+  ],
+  "cSpell.words": [
+    "Coderhouse",
+    "Coderuouse",
+    "Coursera",
+    "HACKTHEBOX"
   ]
 }
