agrego boton para subir

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,10 +4,14 @@
     "astro"
   ],
   "cSpell.words": [
+    "astrojs",
     "Coderhouse",
     "Coderuouse",
     "Coursera",
+    "fontsource",
     "HACKTHEBOX",
-    "Stackicon"
+    "onest",
+    "Stackicon",
+    "tailwindcss"
   ]
 }
