--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "porfolio-dev",
   "type": "module",
-  "version": "0.0.1",
+  "version": "0.2.0",
   "scripts": {
-    "dev": "astro dev",
+    "dev": "astro dev --host",
     "start": "astro dev",
     "build": "astro check && astro build",
     "preview": "astro preview",
@@ -11,11 +11,14 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.9.4",
-    "@astrojs/tailwind": "^5.1.2",
+    "@astrojs/sitemap": "^3.7.0",
     "@fontsource-variable/onest": "^5.1.0",
     "astro": "^5.0.5",
     "astro-robots-txt": "^1.0.0",
-    "tailwindcss": "^3.4.17",
+    "tailwindcss": "^4.1.18",
     "typescript": "^5.7.3"
+  },
+  "devDependencies": {
+    "@tailwindcss/vite": "^4.1.18"
   }
 }
